--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <ul>
                     <li>
                         <img
-                            src="./images/Markphoto.jpg"
+                            src="./images/Markphoto.jpeg"
                             alt="Mark Guerrero"
                             width="264"
                             height="176"
@@ -87,7 +87,7 @@
 
                     <li>
                         <img
-                            src="./images/Tomphoto.jpg"
+                            src="./images/Tomphoto.jpeg"
                             alt="Tom Ford"
                             width="264"
                         />
@@ -96,7 +96,7 @@
                     </li>
                     <li>
                         <img
-                            src="./images/Camiliaphoto.jpg"
+                            src="./images/Camiliaphoto.jpeg"
                             alt="Camila Garcia"
                             width="264"
                         />
@@ -105,7 +105,7 @@
                     </li>
                     <li>
                         <img
-                            src="./images/Danielphoto.jpg"
+                            src="./images/Danielphoto.jpeg"
                             alt="Daniel Wilson"
                             width="264"
                         />
