--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <nav>
-                <a href="./index.html">WEBStudio</a>
+                <a>WEBStudio</a>
                 <ul>
                     <li><a href="link-studio">Studio</a></li>
                     <li>
@@ -76,7 +76,7 @@
                 <ul>
                     <li>
                         <img
-                            src="./images/Markphoto.jpeg"
+                            src="./images/Markphoto.jpg"
                             alt="Mark Guerrero"
                             width="264"
                             height="176"
@@ -87,7 +87,7 @@
 
                     <li>
                         <img
-                            src="./images/Tomphoto.jpeg"
+                            src="./images/Tomphoto.jpg"
                             alt="Tom Ford"
                             width="264"
                         />
@@ -96,7 +96,7 @@
                     </li>
                     <li>
                         <img
-                            src="./images/Camiliaphoto.jpeg"
+                            src="./images/Camiliaphoto.jpg"
                             alt="Camila Garcia"
                             width="264"
                         />
@@ -105,7 +105,7 @@
                     </li>
                     <li>
                         <img
-                            src="./images/Danielphoto.jpeg"
+                            src="./images/Danielphoto.jpg"
                             alt="Daniel Wilson"
                             width="264"
                         />
@@ -116,7 +116,7 @@
             </section>
         </main>
         <footer>
-            <a href="./index.html">WEBStudio</a>
+            <a>WEBStudio</a>
             <p>
                 Increase the flow of customers and sales for your business with
                 digital marketing & growth solutions.
